--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
