--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
