--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -31,6 +31,7 @@
       "@lib/*": ["src/lib/*"],
       "@services/*": ["src/services/*"],
       "@app/*": ["src/app/*"],
+      "@context/*": ["src/context/*"],
     },
   },
   "include": ["src"]
