--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for a todo app using express and sqlite3",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "jest"
   },
   "keywords": [
     "express",
@@ -23,6 +24,9 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.2"
   }
 }
